--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,17 +5,21 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0-174.3.beta <4.0.0'
+  sdk: '>=3.1.0'
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
+  injectable: ^2.3.2
+  injectable_generator: ^2.4.1
+  get_it: ^7.6.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.8
 
 
 flutter:
