--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   injectable: ^2.3.2
   injectable_generator: ^2.4.1
   get_it: ^7.6.6
+  grpc: ^3.2.4
+  freezed: ^2.4.6
+  freezed_annotation: ^2.4.1
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
